--- a/.pylintrc
+++ b/.pylintrc
@@ -6,9 +6,12 @@
 # f-string-without-interpolation (we allow f-strings that don't do any formatting for consistent looks and for future safety)
 # fixme (left 'TODO' lines)
 # inherit-non-class ("Inheriting 'NamedTuple', which is not a class" false positive, see: https://github.com/PyCQA/pylint/issues/3876)
-# too-few-public-methods
+# too-few-public-methods (often false positive)
+# For the following 2, see Black argumentation at https://github.com/psf/black/blob/master/docs/compatible_configs.md#why-those-options-above-2
+# C0330: Wrong hanging indentation before block (add 4 spaces) see
+# C0326: Bad whitespace
 
-disable=E0401,E1101,I1101,R0801,f-string-without-interpolation,fixme,inherit-non-class,too-few-public-methods
+disable=E0401,E1101,I1101,R0801,f-string-without-interpolation,fixme,inherit-non-class,too-few-public-methods,C0330,C0326
 
 # Overriding these to allow short 1- or 2-letter variable names
 attr-rgx=[a-z_][a-z0-9_]{0,30}$
