--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,6 +4,12 @@ on: [push, pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        # https://github.com/marketplace/actions/setup-miniconda#use-a-default-shell
+        shell: bash -l {0}
+
     steps:
       - uses: actions/checkout@main
 
@@ -13,13 +19,10 @@ jobs:
           activate-environment: analysis-runner
 
       - name: pylint
-        shell: bash -l {0}
         run: pylint **/*.py
 
       - name: flake8
-        shell: bash -l {0}
         run: flake8 .
 
       - name: black
-        shell: bash -l {0}
         run: black . --check
