--- a/.pylintrc
+++ b/.pylintrc
@@ -5,23 +5,25 @@
 # 2. inherit-non-class ("Inheriting 'NamedTuple', which is not a class" false
 #    positive, see: https://github.com/PyCQA/pylint/issues/3876)
 # 3. too-few-public-methods (produces false positives)
-# 4. inspections incompatible with Black (see https://github.com/psf/black/blob/master/docs/compatible_configs.md#why-those-options-above-2)
-#    C0330: Wrong hanging indentation before block (add 4 spaces) see
+# 4. inspections incompatible with Black (see
+     https://github.com/psf/black/blob/master/docs/compatible_configs.md#why-those-options-above-2):
+#    C0330: Wrong hanging indentation before block (add 4 spaces)
 #    C0326: Bad whitespace
-disable=f-string-without-interpolation,inherit-non-class,too-few-public-methods,C0330,C0326
+# 5. fixme (left 'TODO' lines)
 
-# Overriding these to allow short 1- or 2-letter variable names
+disable=f-string-without-interpolation,inherit-non-class,too-few-public-methods,C0330,C0326,fixme
+
+# Overriding variable name patterns to allow short 1- or 2-letter variables
 attr-rgx=[a-z_][a-z0-9_]{0,30}$
 argument-rgx=[a-z_][a-z0-9_]{0,30}$
 variable-rgx=[a-z_][a-z0-9_]{0,30}$
 
-# Maximum number of characters on a single line
+# Maximum number of characters on a single line. Default for black, see:
+# https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length
 max-line-length=88
 
-# Set the linting for string quotes (for the plugin https://pypi.org/project/pylint-quotes/)
-string-quote=single
-triple-quote=double
-docstring-quote=double
-
-[MASTER]
-load-plugins=pylint_quotes
+[DESIGN]
+# Maximum number of locals for function / method body
+max-locals=25
+# Maximum number of arguments for function / method
+max-args=10
