--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,20 +5,34 @@ repos:
   - id: check-yaml
   - id: end-of-file-fixer
   - id: trailing-whitespace
+    exclude: '\.txt$|\.tsv$'
+  - id: check-case-conflict
+  - id: check-merge-conflict
+  - id: detect-private-key
+  - id: debug-statements
+  - id: check-added-large-files
+
+- repo: https://github.com/igorshubovych/markdownlint-cli
+  rev: v0.22.0
+  hooks:
+  - id: markdownlint
 
 - repo: https://github.com/ambv/black
   rev: 20.8b1
   hooks:
   - id: black
 
-- repo: https://github.com/pycqa/pylint
-  rev: '2.6'
-  hooks:
-  - id: pylint
-    additional_dependencies: [pylint-quotes]
-
 - repo: https://gitlab.com/pycqa/flake8
   rev: '3.8.4'
   hooks:
   - id: flake8
-    additional_dependencies: [flake8-bugbear]
+    additional_dependencies: [flake8-bugbear, flake8-quotes]
+
+# Using system installation of pylint to support checking python module imports
+- repo: local
+  hooks:
+  - id: pylint
+    name: pylint
+    entry: pylint
+    language: system
+    types: [python]
