--- a/.pylintrc
+++ b/.pylintrc
@@ -11,7 +11,8 @@
 #    C0326: Bad whitespace
 # 5. fixme (left 'TODO' lines)
 
-disable=f-string-without-interpolation,inherit-non-class,too-few-public-methods,C0330,C0326,fixme
+disable=f-string-without-interpolation,inherit-non-class,too-few-public-methods,C0330,
+        C0326,fixme,logging-fstring-interpolation
 
 # Overriding variable name patterns to allow short 1- or 2-letter variables
 attr-rgx=[a-z_][a-z0-9_]{0,30}$
