--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -13,5 +13,7 @@ dependencies:
   - pylint
   - python-kubernetes=12.0.1
   - python=3.7
+  - bump2version
+  - requests
   - pip:
     - pulumi-gcp
