--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -8,6 +8,7 @@ dependencies:
   - flake8
   - flake8-bugbear
   - google-cloud-secret-manager=2.2.0
+  - google-cloud-pubsub==2.3.0
   - hail=0.2.61.devd9fcfb5
   - pre-commit
   - pylint
