--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -7,8 +7,9 @@ dependencies:
   - black
   - flake8
   - flake8-bugbear
+  - google-auth=1.24.0
   - google-cloud-secret-manager=2.2.0
-  - google-cloud-pubsub==2.3.0
+  - google-cloud-pubsub=2.3.0
   - hail=0.2.61.devd9fcfb5
   - pre-commit
   - pylint
