--- a/stack/Pulumi.fewgenomes.yaml
+++ b/stack/Pulumi.fewgenomes.yaml
@@ -3,6 +3,7 @@ config:
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
   datasets:hail_service_account: fewgenomes-911@hail-295901.iam.gserviceaccount.com
+  datasets:hail_extended_service_account: fewgenomes-extended-778@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: fewgenomes
   gcp:project: fewgenomes
   gcp:user_project_override: "true"
