--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 current_version = 1.1.0
 commit = True
-tag = True
+tag = False
 
 [bumpversion:file:cli/_version.py]
 search = __version__ = '{current_version}'
