Container clean-up fix - account for layers (#35)
* Container clean-up - account for layers

* Fix tabs/spaces

--- a/driver/Dockerfile
+++ b/driver/Dockerfile
@@ -3,14 +3,15 @@
 FROM marketplace.gcr.io/google/ubuntu1804
 
 # Install git.
-RUN apt-get update && apt-get install -y git
+RUN apt-get update && apt-get install -y git &&\
+    rm -r /var/lib/apt/lists/* &&\
+    rm -r /var/cache/apt/*
 
-# Install Miniconda.
-RUN curl -o miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-py37_4.9.2-Linux-x86_64.sh && bash miniconda.sh -b && rm miniconda.sh
 ENV PATH /root/miniconda3/bin:$PATH
 
-# Install Hail from the conda CPG channel.
-RUN conda install -y -c cpg -c bioconda -c conda-forge hail=0.2.62.devcdb8c94
-
-# Clean up
-RUN rm -rf /root/miniconda3/pkgs
+# Install Miniconda & Hail from the conda CPG channel
+RUN curl -o miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-py37_4.9.2-Linux-x86_64.sh &&\
+    bash miniconda.sh -b &&\
+    rm miniconda.sh &&\
+    conda install -y -c cpg -c bioconda -c conda-forge hail=0.2.62.devcdb8c94 &&\
+    rm -r /root/miniconda3/pkgs /root/miniconda3/src.zip
