Fix docker build.

--- a/.github/workflows/hail_update.yaml
+++ b/.github/workflows/hail_update.yaml
@@ -19,7 +19,7 @@ jobs:
     steps:
     - name: "build driver image"
       run: |
-        docker build --build-arg HAIL_VERSION=${{ github.event.inputs.hail_version }} --tag $DRIVER_IMAGE
+        docker build --build-arg HAIL_VERSION=${{ github.event.inputs.hail_version }} --tag $DRIVER_IMAGE driver
 
     - name: "push driver image"
       run: |
@@ -27,7 +27,7 @@ jobs:
 
     - name: "build server image"
       run: |
-        docker build --build_arg DRIVER_IMAGE=$DRIVER_IMAGE --tag $SERVER_IMAGE
+        docker build --build_arg DRIVER_IMAGE=$DRIVER_IMAGE --tag $SERVER_IMAGE server
 
     - name: "push server image"
       run: |
