Also configure australia-southeast1-docker.pkg.dev.

--- a/.github/workflows/hail_update.yaml
+++ b/.github/workflows/hail_update.yaml
@@ -28,7 +28,7 @@ jobs:
 
     - name: "gcloud docker auth"
       run: |
-        gcloud auth configure-docker gcr.io
+        gcloud auth configure-docker gcr.io australia-southeast1-docker.pkg.dev
 
     - name: "build driver image"
       run: |
