--- a/.github/workflows/hail_update.yaml
+++ b/.github/workflows/hail_update.yaml
@@ -25,6 +25,7 @@ jobs:
       with:
         project_id: analysis-runner
         service_account_key: ${{ secrets.GCP_SERVER_DEPLOY_KEY }}
+        export_default_credentials: true
 
     - name: "gcloud docker auth"
       run: |
