--- a/.github/workflows/hail_update.yaml
+++ b/.github/workflows/hail_update.yaml
@@ -29,7 +29,7 @@ jobs:
 
     - name: "gcloud docker auth"
       run: |
-        gcloud auth configure-docker australia-southeast1-docker.pkg.dev
+        gcloud auth configure-docker marketplace.gcr.io,australia-southeast1-docker.pkg.dev
 
     - name: "build driver image"
       run: |
