--- a/driver/Dockerfile
+++ b/driver/Dockerfile
@@ -2,6 +2,8 @@
 # https://stackoverflow.com/questions/61744540/unable-to-deploy-ubuntu-20-04-docker-container-on-google-cloud-run
 FROM marketplace.gcr.io/google/ubuntu1804
 
+ARG HAIL_VERSION
+
 # Install git.
 RUN apt-get update && apt-get install -y git &&\
     rm -r /var/lib/apt/lists/* &&\
@@ -13,5 +15,5 @@ ENV PATH /root/miniconda3/bin:$PATH
 RUN curl -o miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-py37_4.9.2-Linux-x86_64.sh &&\
     bash miniconda.sh -b &&\
     rm miniconda.sh &&\
-    conda install -y -c cpg -c bioconda -c conda-forge hail=0.2.62.devcdb8c94 &&\
+    conda install -y -c cpg -c bioconda -c conda-forge hail=$HAIL_VERSION &&\
     rm -r /root/miniconda3/pkgs /root/miniconda3/src.zip
