--- a/.github/workflows/hail_update.yaml
+++ b/.github/workflows/hail_update.yaml
@@ -50,6 +50,20 @@ jobs:
       run: |
         docker push $SERVER_IMAGE
 
+    - name: "deploy server-test"
+      run: |
+        gcloud run deploy server-test --region australia-southeast1 --no-allow-unauthenticated --platform managed --set-env-vars=DRIVER_IMAGE=$DRIVER_IMAGE --image $SERVER_IMAGE
+
+    - name: "submit test batch"
+      run: |
+        URL=$(gcloud run services describe server-test --region australia-southeast1 --platform managed --format "value(status.url)")
+        TOKEN=$(gcloud auth print-identity-token)
+        curl --fail --silent --show-error -X POST \
+            -H "Authorization: Bearer $TOKEN" \
+            -H "Content-Type:application/json" \
+            -d '{"output": "gs://cpg-analysis-runner-test", "dataset": "fewgenomes", "extendedAccess": false, "repo": "analysis-runner", "commit": "${{ github.sha }}", "script": ["test/main.py"], "description": "analysis-runner-test", "wait": true}' \
+            $URL
+
     - name: "deploy server"
       run: |
         gcloud run deploy server --region australia-southeast1 --no-allow-unauthenticated --platform managed --set-env-vars=DRIVER_IMAGE=$DRIVER_IMAGE --image $SERVER_IMAGE
