--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,13 +2,13 @@
 ARG DRIVER_IMAGE
 FROM ${DRIVER_IMAGE}
 
-RUN conda install -c conda-forge\
-    google-api-python-client=1.12.8\
-    google-auth==1.24.0\
-    google-cloud-secret-manager==2.2.0\
-    google-cloud-pubsub==2.3.0\
-    gunicorn &&\
-    rm -r /root/miniconda3/pkgs
+RUN micromamba install -c conda-forge \
+    google-api-python-client=1.12.8 \
+    google-auth==1.24.0 \
+    google-cloud-secret-manager==2.2.0 \
+    google-cloud-pubsub==2.3.0 \
+    gunicorn && \
+    rm -r /root/micromamba/pkgs
 
 # Allow statements and log messages to immediately appear in the Knative logs.
 ENV PYTHONUNBUFFERED 1
