--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,7 @@ current_version = 1.1.0
 commit = True
 tag = False
 
-[bumpversion:file:cli/_version.py]
+[bumpversion:file:analysis_runner/_version.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
