Add pip as conda dependency

--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -18,6 +18,7 @@ dependencies:
   - python=3.7
   - bump2version
   - requests
+  - pip
   - pip:
     - airtable-python-wrapper==0.15.1
     - pulumi-gcp
