--- a/stack/Pulumi.tob-wgs.yaml
+++ b/stack/Pulumi.tob-wgs.yaml
@@ -3,8 +3,9 @@ config:
   datasets:archive_age: "365"
   datasets:customer_id: C010ys3gt
   datasets:enable_release: "false"
-  datasets:hail_service_account: tob-wgs-960@hail-295901.iam.gserviceaccount.com
-  datasets:hail_extended_service_account: tob-wgs-extended-342@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: tob-wgs-test-996@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: tob-wgs-standard-496@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_full: tob-wgs-full-484@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: tob-wgs
   gcp:project: tob-wgs
   gcp:user_project_override: "true"
