Add R + tidyverse to AR driver

--- a/driver/Dockerfile
+++ b/driver/Dockerfile
@@ -1,5 +1,4 @@
-# uses debian base
-FROM rocker/tidyverse:4.0.4
+FROM debian:buster-slim
 
 ARG HAIL_VERSION
 
@@ -12,7 +11,10 @@ RUN apt-get update && apt-get install -y git wget bash bzip2 zip && \
     rm -r /var/cache/apt/* && \
     wget -qO- https://api.anaconda.org/download/conda-forge/micromamba/0.8.2/linux-64/micromamba-0.8.2-he9b6cbd_0.tar.bz2 | tar -xvj -C /usr/local bin/micromamba && \
     mkdir $MAMBA_ROOT_PREFIX && \
-    micromamba install -y --prefix $MAMBA_ROOT_PREFIX -c cpg -c bioconda -c conda-forge hail=$HAIL_VERSION analysis-runner bokeh selenium phantomjs && \
+    micromamba install -y --prefix $MAMBA_ROOT_PREFIX \
+        -c cpg -c bioconda -c conda-forge \
+        hail=$HAIL_VERSION analysis-runner bokeh selenium phantomjs \
+        r-base=4.0.3 r-essentials r-tidyverse && \
     rm -r /root/micromamba/pkgs && \
     # hailctl dataproc uses gcloud beta dataproc.
     gcloud -q components install beta
