--- a/.pylintrc
+++ b/.pylintrc
@@ -13,7 +13,7 @@
 # 6. line-too-long
 
 disable=f-string-without-interpolation,inherit-non-class,too-few-public-methods,C0330,
-        C0326,fixme,logging-fstring-interpolation,line-too-long
+        C0326,fixme,logging-fstring-interpolation,line-too-long,too-many-statements
 
 # Overriding variable name patterns to allow short 1- or 2-letter variables
 attr-rgx=[a-z_][a-z0-9_]{0,30}$
