Use cpg-utils library instead of cloud_identity.py

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,8 +2,8 @@
 ARG DRIVER_IMAGE
 FROM ${DRIVER_IMAGE}
 
-RUN micromamba install --prefix $MAMBA_ROOT_PREFIX -c conda-forge \
-    google-api-python-client=1.12.8 \
+RUN micromamba install --prefix $MAMBA_ROOT_PREFIX -c cpg -c conda-forge \
+    cpg-utils \
     google-auth==1.24.0 \
     google-cloud-secret-manager==2.2.0 \
     google-cloud-pubsub==2.3.0 \
