Fix main branch name

--- a/.github/workflows/condarise.yaml
+++ b/.github/workflows/condarise.yaml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build-publish:
-    # Run on merge to master, where the commit name starts with "Bump version:" (for bump2version)
+    # Run on merge to main, where the commit name starts with "Bump version:" (for bump2version)
     if: "startsWith(github.event.head_commit.message, 'Bump version:')"
     runs-on: ubuntu-latest
     defaults:
