Web server impl

--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -8,9 +8,9 @@ dependencies:
   - cpg-utils
   - flake8
   - flake8-bugbear
-  - google-auth=1.24.0
   - google-cloud-secret-manager=2.2.0
   - google-cloud-pubsub=2.3.0
+  - google-cloud-storage=1.38.0
   - hail
   - pre-commit
   - pylint
