--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -8,6 +8,7 @@ dependencies:
   - cpg-utils
   - flake8
   - flake8-bugbear
+  - flask
   - google-cloud-secret-manager=2.2.0
   - google-cloud-pubsub=2.3.0
   - google-cloud-storage=1.38.0
