Restore google-auth dependency
This got lost in #99, but is still required for the cli
(see e.g. https://github.com/populationgenomics/analysis-runner/runs/2616991217?check_suite_focus=true).

--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -9,6 +9,7 @@ dependencies:
   - flake8
   - flake8-bugbear
   - flask
+  - google-auth=1.24.0
   - google-cloud-secret-manager=2.2.0
   - google-cloud-pubsub=2.3.0
   - google-cloud-storage=1.38.0
