--- a/.pylintrc
+++ b/.pylintrc
@@ -11,9 +11,10 @@
 #    C0326: Bad whitespace
 # 5. fixme (left 'TODO' lines)
 # 6. line-too-long
+# 7. similar lines
 
 disable=f-string-without-interpolation,inherit-non-class,too-few-public-methods,C0330,
-        C0326,fixme,logging-fstring-interpolation,line-too-long,too-many-statements
+        C0326,fixme,logging-fstring-interpolation,line-too-long,too-many-statements,R0801
 
 # Overriding variable name patterns to allow short 1- or 2-letter variables
 attr-rgx=[a-z_][a-z0-9_]{0,30}$
