Fix google-api-python-client deps
It's not pulled in indirectly through cpg-utils anymore.

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y wget bzip2 && \
     wget -qO- https://api.anaconda.org/download/conda-forge/micromamba/0.8.2/linux-64/micromamba-0.8.2-he9b6cbd_0.tar.bz2 | tar -xvj -C /usr/local bin/micromamba && \
     mkdir $MAMBA_ROOT_PREFIX && \
     micromamba install -y --prefix $MAMBA_ROOT_PREFIX -c cpg -c conda-forge \
-    cpg-utils==1.0.0 flask gunicorn google-cloud-storage==1.38.0 google-cloud-secret-manager==2.2.0 && \
+    cpg-utils==2.0.0 flask gunicorn google-api-python-client==2.10.0 google-cloud-storage==1.38.0 google-cloud-secret-manager==2.2.0 && \
     rm -r /root/micromamba/pkgs
 
 COPY main.py ./
