--- a/.github/workflows/hail_update.yaml
+++ b/.github/workflows/hail_update.yaml
@@ -61,7 +61,7 @@ jobs:
         curl --fail --silent --show-error -X POST \
             -H "Authorization: Bearer $TOKEN" \
             -H "Content-Type:application/json" \
-            -d '{"output": "gs://cpg-analysis-runner-test/test/v42", "dataset": "fewgenomes", "accessLevel": "test", "repo": "analysis-runner", "commit": "${{ github.sha }}", "cwd": "test", "script": ["./main.py"], "description": "analysis-runner-test", "wait": true}' \
+            -d '{"output": "ci-test-batch/v42", "dataset": "fewgenomes", "accessLevel": "test", "repo": "analysis-runner", "commit": "${{ github.sha }}", "cwd": "test", "script": ["./main.py"], "description": "analysis-runner-test", "wait": true}' \
             $URL
 
     - name: "deploy server"
