--- a/stack/Pulumi.tob-wgs.yaml
+++ b/stack/Pulumi.tob-wgs.yaml
@@ -2,10 +2,11 @@ encryptionsalt: v1:Fqx5NHuwjAg=:v1:h0vU5VjoszHXllH7:tUAorwiljPS1C1Ft18iHzaO0c+HO
 config:
   datasets:archive_age: "365"
   datasets:customer_id: C010ys3gt
+  datasets:depends_on: '["thousand-genomes"]'
   datasets:enable_release: "false"
-  datasets:hail_service_account_test: tob-wgs-test-996@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_standard: tob-wgs-standard-496@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: tob-wgs-full-484@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: tob-wgs-standard-496@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: tob-wgs-test-996@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: tob-wgs
   gcp:project: tob-wgs
   gcp:user_project_override: "true"
