Add new datasets + formats repository-map (#312)
* Add new datasets + formats repository-map

* Add schr-neuro

* Add schr-neuro to seqr datasets

--- a/stack/Pulumi.seqr.yaml
+++ b/stack/Pulumi.seqr.yaml
@@ -1,14 +1,15 @@
-encryptionsalt: v1:58BWphXSDio=:v1:9KydLgEdNGdRloZf:phZCGaeRzAGsTdOdTWBG1Wbu6GtX3w==
 config:
-  datasets:archive_age: "30"
+  datasets:archive_age: '30'
   datasets:customer_id: C010ys3gt
-  datasets:depends_on: '["acute-care", "perth-neuro", "rdnow", "heartkids", "ravenscroft-rdstudy", "ohmr3-mendelian", "ohmr4-epilepsy"]'
-  datasets:enable_release: "false"
-  datasets:hail_service_account_test: seqr-test-709@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_standard: seqr-standard-758@hail-295901.iam.gserviceaccount.com
-  datasets:hail_service_account_full: seqr-full-041@hail-295901.iam.gserviceaccount.com
-  datasets:deployment_service_account_test: seqr-dev@seqr-308602.iam.gserviceaccount.com
+  datasets:depends_on: '["acute-care", "perth-neuro", "rdnow", "heartkids", "ravenscroft-rdstudy",
+    "ohmr3-mendelian", "ohmr4-epilepsy", "flinders-ophthal", "circa", "schr-neuro"]'
   datasets:deployment_service_account_standard: seqr-prod@seqr-308602.iam.gserviceaccount.com
+  datasets:deployment_service_account_test: seqr-dev@seqr-308602.iam.gserviceaccount.com
+  datasets:enable_release: 'false'
+  datasets:hail_service_account_full: seqr-full-041@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_standard: seqr-standard-758@hail-295901.iam.gserviceaccount.com
+  datasets:hail_service_account_test: seqr-test-709@hail-295901.iam.gserviceaccount.com
   gcp:billing_project: seqr-308602
   gcp:project: seqr-308602
-  gcp:user_project_override: "true"
+  gcp:user_project_override: 'true'
+encryptionsalt: v1:58BWphXSDio=:v1:9KydLgEdNGdRloZf:phZCGaeRzAGsTdOdTWBG1Wbu6GtX3w==
