--- a/driver/Dockerfile
+++ b/driver/Dockerfile
@@ -14,19 +14,20 @@ RUN apt-get update && apt-get install -y git wget bash bzip2 zip && \
     mkdir $MAMBA_ROOT_PREFIX && \
     micromamba install -y --prefix $MAMBA_ROOT_PREFIX \
         -c cpg -c bioconda -c conda-forge \
-        analysis-runner \
         bokeh \
-        cpg-utils \
         phantomjs \
         r-argparser \
         r-base=4.1.1 \
         r-essentials \
         r-tidyverse \
-        sample-metadata=4.1.1 \
         selenium \
         skopeo \
         statsmodels && \
     rm -r /root/micromamba/pkgs && \
-    pip3 install cpg-hail=$HAIL_VERSION && \
+    pip3 install \
+        cpg-hail=$HAIL_VERSION \
+        cpg-utils=2.1.1 \
+        analysis-runner \
+        sample-metadata=4.1.2 && \
     # hailctl dataproc uses gcloud beta dataproc.
     gcloud -q components install beta
