--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,15 +2,13 @@
 ARG DRIVER_IMAGE
 FROM ${DRIVER_IMAGE}
 
-RUN micromamba install --prefix $MAMBA_ROOT_PREFIX -c cpg -c conda-forge \
-    cpg-utils==2.1.1 \
+RUN pip install \
     google-api-python-client==2.10.0 \
     google-cloud-secret-manager==2.2.0 \
     google-cloud-pubsub==2.3.0 \
     google-cloud-logging==2.7.0 \
     gunicorn \
-    requests && \
-    rm -r /root/micromamba/pkgs
+    requests
 
 # Allow statements and log messages to immediately appear in the Knative logs.
 ENV PYTHONUNBUFFERED 1
