Make sure to run CI on PRs too

--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -1,18 +1,15 @@
 name: Package
 on:
-  # Building on pull-requests and pushes to main, but restricting publishing
-  # to push events with `if: github.event_name == 'push'` for specific steps
+  # Building on pull-requests, manual dispatch, and pushes to main; but restricting
+  # publishing only to main pushes and manual dispatch with `if`s in specific steps.
   pull_request:
+  workflow_dispatch:
   push:
     branches:
       - main
-  workflow_dispatch: {}
 
 jobs:
   package:
-    # Run when merging into main with a commit that starts with "Bump version:"
-    # OR where the workflow was manually dispatched:
-    if: "${{ startsWith(github.event.head_commit.message, 'Bump version:') || github.event_name == 'workflow_dispatch' }}"
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -23,7 +20,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-          cache: 'pip'
 
       - name: Build
         run: python setup.py sdist
@@ -35,7 +31,9 @@ jobs:
         run: python -m unittest test/test_analysis_runner.py
 
       - name: Publish the wheel to PyPI
-        if: github.event_name == 'push'
+        # Run when merging into main with a commit that starts with "Bump version:"
+        # OR where the workflow was manually dispatched:
+        if: "${{ startsWith(github.event.head_commit.message, 'Bump version:') || github.event_name == 'workflow_dispatch' }}"
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
